examples/pos/object/if_control_effect.effekt
interface Control {
    def ifelse[A](cond: Boolean) { tcase: () => A } { fcase: () => A }: A
}

def cImpl: Control = new Control {
    def ifelse[A](cond) { t: () => A } { f: () => A } =
        if (cond) { t() } else { f() }
}

def main() = {
    cImpl.ifelse(1 == 2) {
        println("true")
    } {
        println("false")
    }
    cImpl.ifelse(1 == 1) {
        println("true")
    } {
        println("false")
    } 
}